agrego vista web de la documentacion

--- a/nodepop/views/index.ejs
+++ b/nodepop/views/index.ejs
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+<title>NodePop</title>
+    <xmp theme="cyborg" style="display:none;">
+      <%- readme %> 
+    </xmp>
+    <script src="http://strapdownjs.com/v/0.2/strapdown.js"></script>
 </html>
